1.3.2
Added: Config to replace heart container drops with heart crystal shards.

1.3.1
Added: Config to allow/prevent fake players from getting heart container drops (main/fake_players/Can Generate Hearts)
Added: Config to allow/prevent fake players from accumulating difficulty (main/fake_players/Have Difficulty) (WIP on #48, doesn't really do anything of note right now)
Added: Config to blacklist mob extra health by dimension (main/mob/health/Dimension Blacklist) (#37)
Added: Config for difficulty change on boss kills (main/difficulty/Difficulty Per Boss Kill) (#42)
Added: Config to blacklist all bosses from becoming blights (main/mob/blights/Blacklist All Bosses) (#46)
Added: Color setting for the new health text. GREEN_TO_RED mode (default) displays green at full health and moves to red as you take damage. WHITE is just white. PSYCHEDELIC lets you taste the rainbow.
Changed: Entity blacklists now check for registry names, but the old entity ID's will still match too (#46)

1.3.0
Requires Silent Lib 2.2.9. Cuts support for Minecraft 1.10.2 and 1.11.2.
Added: Bandages and medkits. These items will restore a percentage of your health over a set amount of time. Bandages restore 30% over 60 seconds, and medkits restore 70% over 35 seconds. Movement speed is reduced by 25% while in effect.
Added: Heart dust. Crafted from a heart container and used to craft bandages and medkits. You get 24 dust from each heart, but you can't craft them back.
Added: A small bit of text to the left of hearts. By default (ROWS mode), this will show how many rows of hearts (full and partial) you currently have, but does nothing to indicate your max health. Change to the HEALTH_AND_MAX mode to make the text display your current and max health values (the actual numbers Minecraft stores, so it's in half-hearts). Set to DISABLED to remove the text.